Probably fixed the footer, z-index problems, carousel almost works

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -31,7 +31,6 @@ html {
 
 .container {
 	width: 960px;
-	height: 470px;
 	margin: 0 auto;
 }
 
@@ -53,6 +52,7 @@ html {
 	margin: 0 0 24px;
 	padding: 56px 0 0;
 }
+
 .contents h1, #featured h3 {
 	color: #fbfdfd;
 	font: italic 34px Georgia, "Times New Roman", Times, serif;
@@ -127,7 +127,6 @@ html {
 
 #footer .body {
 	background: #072438 url(/img/bg-footer.jpg) no-repeat center top;
-	min-height: 136px;
 	padding: 36px 0;
 }
 
@@ -220,7 +219,7 @@ html {
   width: 1280px;
   height: 720px;
   background-color: #333333;
-  z-index: -10;
+  z-index: 1;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -228,7 +227,7 @@ html {
 
 .slider img {
   width: 100%;
-  max-height: 719px;
+  max-height: 720px;
   z-index: 41;
 }
 
@@ -290,11 +289,12 @@ html {
   color: #363636;
 }
 
-.topbox {
+.carousel {
 	background-color:  #020a13;
-	z-index: -1;
+	z-index: 0;
 	display: block;
 	position: static;
 	width: 100%;
+	height: 900px;
 	top: 120px;
 }
